--- a/emascript/index.html
+++ b/emascript/index.html
@@ -4,7 +4,7 @@
    <!-- <script src="variaveis.js"></script>
      <script src="imutalidade2.js"></script>
     <script src="main.js"></script> -->
-    <script src="orientacao_objeto.js"></script>
+    <script src="array/interar_buscar.js"></script>
 </head>
 
 <body>
